--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>David Carson Typography</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1 class="title">David Carson-inspired Typography</h1>
+    <h3 class="titleDes">A School Project</h3>
+    <div class="container">
+        <div><button class="changeBtn">Change</button></div>
+        <div class="card"><img id = "D" class ="letter" src="images/helvetica/D.png" alt="LetterD"></div>
+        <div class="card"><img id = "M" class ="letter" src="images/helvetica/M.png" alt="LetterD"></div>
+    </div>
+    <script src="changeLetter.js"></script>
+</body>
+</html>
