--- a/index.html
+++ b/index.html
@@ -8,13 +8,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">David Carson-inspired Typography</h1>
-    <h3 class="titleDes">A School Project</h3>
-    <div class="container">
-        <div><button class="changeBtn">Change</button></div>
-        <div class="card"><img id = "D" class ="letter" src="images/helvetica/D.png" alt="LetterD"></div>
-        <div class="card"><img id = "M" class ="letter" src="images/helvetica/M.png" alt="LetterD"></div>
+    <div class ="main">
+        <h1 class="title">david carson-inspired typography</h1>
+        <h3 class="titleDes">a school Project - deconstructed helvetica <strong>bold</strong></h3>
+        <button class="btn">Change All</button>
+        <div class="container">
+            <div class="card"><img id = "A" class ="letter" src="images/helvetica/A.png" alt="Letter A"></div>
+            <div class="card"><img id = "B" class ="letter" src="images/helvetica/B.png" alt="Letter B"></div>
+            <div class="card"><img id = "C" class ="letter" src="images/helvetica/C.png" alt="Letter C"></div>
+            <div class="card"><img id = "D" class ="letter" src="images/helvetica/D.png" alt="Letter D"></div>
+            <div class="card"><img id = "E" class ="letter" src="images/helvetica/E.png" alt="Letter E"></div>
+            <div class="card"><img id = "F" class ="letter" src="images/helvetica/F.png" alt="Letter F"></div>
+            <div class="card"><img id = "G" class ="letter" src="images/helvetica/G.png" alt="Letter G"></div>
+            <div class="card"><img id = "H" class ="letter" src="images/helvetica/H.png" alt="Letter H"></div>
+            <div class="card"><img id = "I" class ="letter" src="images/helvetica/I.png" alt="Letter I"></div>
+            <div class="card"><img id = "J" class ="letter" src="images/helvetica/J.png" alt="Letter J"></div>
+            <div class="card"><img id = "K" class ="letter" src="images/helvetica/K.png" alt="Letter K"></div>
+            <div class="card"><img id = "L" class ="letter" src="images/helvetica/L.png" alt="Letter L"></div>
+            <div class="card"><img id = "M" class ="letter" src="images/helvetica/M.png" alt="Letter M"></div>
+            <div class="card"><img id = "N" class ="letter" src="images/helvetica/N.png" alt="Letter N"></div>
+            <div class="card"><img id = "O" class ="letter" src="images/helvetica/O.png" alt="Letter O"></div>
+            <div class="card"><img id = "P" class ="letter" src="images/helvetica/P.png" alt="Letter P"></div>
+            <div class="card"><img id = "Q" class ="letter" src="images/helvetica/Q.png" alt="Letter Q"></div>
+            <div class="card"><img id = "R" class ="letter" src="images/helvetica/R.png" alt="Letter R"></div>
+            <div class="card"><img id = "S" class ="letter" src="images/helvetica/S.png" alt="Letter S"></div>
+            <div class="card"><img id = "T" class ="letter" src="images/helvetica/T.png" alt="Letter T"></div>
+            <div class="card"><img id = "U" class ="letter" src="images/helvetica/U.png" alt="Letter U"></div>
+            <div class="card"><img id = "V" class ="letter" src="images/helvetica/V.png" alt="Letter V"></div>
+            <div class="card"><img id = "W" class ="letter" src="images/helvetica/W.png" alt="Letter W"></div>
+            <div class="card"><img id = "X" class ="letter" src="images/helvetica/X.png" alt="Letter X"></div>
+            <div class="card"><img id = "Y" class ="letter" src="images/helvetica/Y.png" alt="Letter Y"></div>
+            <div class="card"><img id = "Z" class ="letter" src="images/helvetica/Z.png" alt="Letter Z"></div>
+        </div>
     </div>
+    <footer class="footer">&copy; 2022 Huynh Diem Phuong</footer>
     <script src="changeLetter.js"></script>
 </body>
 </html>
