changed button des

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class ="main">
         <h1 class="title">david carson-inspired typography</h1>
         <h3 class="titleDes">a school Project - deconstructed helvetica <strong>bold</strong></h3>
-        <button class="btn">Change All</button>
+        <button class="btn">carsonify</button>
         <div class="container">
             <div class="card"><img id = "A" class ="letter" src="images/helvetica/A.png" alt="Letter A"></div>
             <div class="card"><img id = "B" class ="letter" src="images/helvetica/B.png" alt="Letter B"></div>
