added warning lline

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="card"><img id = "Y" class ="letter" src="images/helvetica/Y.png" alt="Letter Y"></div>
             <div class="card"><img id = "Z" class ="letter" src="images/helvetica/Z.png" alt="Letter Z"></div>
         </div>
+        <h3 class="warning-mes">Please reload the page if all the alphabet letters are not displayed.</h3>
     </div>
     <footer class="footer">&copy; 2022 Huynh Diem Phuong</footer>
     <script src="changeLetter.js"></script>
